kubernetes/apps/test-applications/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: segment-checker
  name: segment-checker
  namespace: tam
spec:
  type: ClusterIP
  selector:
    app: segment-checker
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
