kubernetes/apps/test-applications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: segment-checker
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: liveramp.70ld.home
      http:
        paths:
          - backend:
              service:
                name: segment-checker
                port:
                  number: 80
            path: /static/index.html
            pathType: Prefix
